--- a/public/css/app.css
+++ b/public/css/app.css
@@ -1,9 +1,22 @@
 @import url(https://fonts.googleapis.com/css?family=Nunito);@charset "UTF-8";
 
-.vew,
-.time-place {
-  height: 350px !important;
-  background: url(https://mdbootstrap.com/img/Photos/Others/city13.jpg) no-repeat center fixed;
+.coming-card {
+  background-color: #62DDBD !important;
+  color: white !important;
+}
+
+.not-attends-card {
+  background-color: #46CAED !important;
+  color: white !important;
+}
+
+.center-mamask {
+  background: linear-gradient(40deg, rgba(29, 236, 197, 0.7), rgba(91, 14, 214, 0.7));
+}
+
+.center-ma {
+  background: linear-gradient(rgba(0, 47, 75, 0.5) 0%, rgba(220, 66, 37, 0.5) 100%);
+  height: 400px;
 }
 
 /*!
